<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">遥控器</string>
    <string name="text_scan">扫描</string>
    <string name="text_up">上移</string>
    <string name="text_down">下移</string>
    <string name="text_left">左移</string>
    <string name="text_right">右移</string>
    <string name="text_enter">确定</string>
    <string name="text_back">返回</string>
    <string name="text_home">主页</string>
    <string name="text_menu">菜单</string>
    <string name="text_volume_down">音量-</string>
    <string name="text_volume_up">音量+</string>
    <string name="text_bright_down">亮度-</string>
    <string name="text_bright_up">亮度+</string>
    <string name="text_power">电源</string>
    <string name="text_mute">静音</string>
    <string name="text_del">删除</string>
    <string name="text_connected">已连接</string>
    <string name="text_not_connect">未连接</string>
    <string name="text_manul_connect">检测到多个设备，请手动连接</string>
    <string name="text_scan_complete">发现 <xliff:g id="count" example="123">%1$s</xliff:g> 个设备</string>
    <string name="text_device_not_found">没有发现设备</string>
    <string name="text_disconnected">已断开连接</string>
    <string name="text_scanning">正在扫描</string>
    <string name="text_play_previous">上一曲</string>
    <string name="text_play_next">下一曲</string>
    <string name="text_play_pause">播放</string>
    <string name="text_display_on_off">关屏</string>

</resources>
