<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cavan.remotecontrol.MainActivity" >

    <Button
        android:id="@+id/buttonBrightDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonScan"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:text="@string/text_bright_down"
        android:textSize="@dimen/key_text_size" />

    <Button
        android:id="@+id/buttonScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/text_scan"
        android:textSize="@dimen/key_text_size" />

    <Button
        android:id="@+id/buttonBrightUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/buttonBrightDown"
        android:text="@string/text_bright_up"
        android:textSize="@dimen/key_text_size" />

    <Button
        android:id="@+id/buttonVolumeDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttonBrightDown"
        android:layout_marginTop="10dp"
        android:text="@string/text_volume_down"
        android:textSize="@dimen/key_text_size" />

    <Button
        android:id="@+id/buttonVolumeUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonVolumeDown"
        android:layout_alignParentRight="true"
        android:text="@string/text_volume_up"
        android:textSize="@dimen/key_text_size" />

    <Button
        android:id="@+id/buttonMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttonVolumeDown"
        android:layout_marginTop="10dp"
        android:text="@string/text_menu"
        android:textSize="@dimen/key_text_size" />

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonScan"
        android:layout_centerHorizontal="true"
        android:text="@string/text_home"
        android:textSize="@dimen/key_text_size" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/buttonScan"
        android:text="@string/text_back"
        android:textSize="@dimen/key_text_size" />

    <Button
        android:id="@+id/buttonUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/buttonMenu"
        android:text="@string/text_up"
        android:textSize="@dimen/key_text_size" />

    <Button
        android:id="@+id/buttonLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttonMenu"
        android:layout_marginTop="10dp"
        android:text="@string/text_left"
        android:textSize="@dimen/key_text_size" />

    <Button
        android:id="@+id/buttonEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonLeft"
        android:layout_centerHorizontal="true"
        android:text="@string/text_enter"
        android:textSize="@dimen/key_text_size" />

    <Button
        android:id="@+id/buttonRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/buttonLeft"
        android:text="@string/text_right"
        android:textSize="@dimen/key_text_size" />

    <Button
        android:id="@+id/buttonDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonEnter"
        android:layout_marginTop="10dp"
        android:text="@string/text_down"
        android:textSize="@dimen/key_text_size" />

    <Button
        android:id="@+id/buttonPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonBrightDown"
        android:layout_centerHorizontal="true"
        android:text="@string/text_power"
        android:textSize="@dimen/key_text_size" />

    <Button
        android:id="@+id/buttonMute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonVolumeDown"
        android:layout_centerHorizontal="true"
        android:text="@string/text_mute"
        android:textSize="@dimen/key_text_size" />

    <Button
        android:id="@+id/buttonDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonUp"
        android:layout_alignParentRight="true"
        android:text="@string/text_del"
        android:textSize="@dimen/key_text_size" />

</RelativeLayout>